--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
-<p>Turn the following list of my favorite vegetables into an unordered list.</p>
+<!DOCTYPE html>
+<html lang="en">
 
-<ul>
-    <li>Cucumber</li>
-    <li>Broccoli</li>
-    <li>Asparagus</li>
-    <li>Pepper</li>
-</ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>html text basics 2</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-<p>Turn the following directions into an ordered list.</p>
+<body>
+    <p>Turn the following list of my favorite vegetables into an unordered list.</p>
 
-<ol>
-    <li>First knock on the door</li>
-    <li>When prompted, say the magic word</li>
-    <li>Wait for at least 5 seconds</li>
-    <li>Turn the handle and push</li>
-</ol>
+    <ul>
+        <li>Cucumber</li>
+        <li>Broccoli</li>
+        <li>Asparagus</li>
+        <li>Pepper</li>
+    </ul>
+
+    <p>Turn the following directions into an ordered list.</p>
+
+    <ol>
+        <li>First knock on the door</li>
+        <li>When prompted, say the magic word</li>
+        <li>Wait for at least 5 seconds</li>
+        <li>Turn the handle and push</li>
+    </ol>
+</body>
+
+</html>
